bring package jsons up to date

--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-app",
+    "name": "chatbot-builder-react",
     "version": "6.17.0",
     "private": true,
     "dependencies": {
