--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vanilla",
+    "name": "chatbot-builder-vanilla",
     "version": "6.17.0",
     "description": "",
     "main": "index.js",
